[package]
name = "nordstone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
age = "0.9.2"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.47"

