[package]
name = "nordstone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
age = "0.9.2"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros"] }
teloxide-core = "0.9.1"
thiserror = "1.0.47"
tokio = { version = "1", features = ["full"] }

